--- a/e-mail.html
+++ b/e-mail.html
@@ -20,11 +20,38 @@
             <img src="static/img/logo.png" alt="">
             <h1>Lorem ipsum</h1>
         </div>
-        <button class="novo-email">
+        <button class="novo-e-mail">
             <span>Novo e-mail</span>
             <span class="material-symbols-outlined icone-botao">add</span>
         </button>
     </nav>
+    <main id="e-mail">
+        <div class="itens">
+            <div class="item titulo">
+                <div class="campo">
+                    <label for="titulo">Título</label>
+                    <textarea name="titulo"></textarea>
+                </div>
+            </div>
+            <div class="item">
+                <div class="campo">
+                    <label for="p1">Parágrafo</label>
+                    <textarea name="p1"></textarea>
+                </div>
+                <span class="material-symbols-outlined">delete</span>
+            </div>
+            <div class="item">
+                <div class="campo">
+                    <label for="img1">Imagem</label>
+                    <input type="file" name="img1">
+                </div>
+                <span class="material-symbols-outlined">delete</span>
+            </div>
+        </div>
+        <div class="preview">
+            
+        </div>
+    </main>
     <script src="static/js/newsletter.js"></script>
 </body>
 </html>
