--- a/newsletter-menu.html
+++ b/newsletter-menu.html
@@ -20,60 +20,60 @@
             <img src="static/img/logo.png" alt="">
             <h1>Lorem ipsum</h1>
         </div>
-        <button class="novo-email">
+        <button class="novo-e-mail">
             <span>Novo e-mail</span>
             <span class="material-symbols-outlined icone-botao">add</span>
         </button>
     </nav>
     <main id="menu-newsletter">
         <h2>Newsletter</h2>
-        <div class="emails">
-            <div class="email novo-email">
+        <div class="e-mails">
+            <div class="e-mail novo-e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Novo e-mail</h3>
                 <span class="material-symbols-outlined status">add</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">edit</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">check</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">check</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">check</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">check</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">check</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">check</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">check</span>
             </div>
-            <div class="email">
+            <div class="e-mail">
                 <span class="material-symbols-outlined icone">mail</span>
                 <h3>Título</h3>
                 <span class="material-symbols-outlined status">check</span>
