Campos da newsletter

--- a/e-mail.html
+++ b/e-mail.html
@@ -20,32 +20,30 @@
             <img src="static/img/logo.png" alt="">
             <h1>Lorem ipsum</h1>
         </div>
-        <button class="novo-e-mail">
-            <span>Novo e-mail</span>
-            <span class="material-symbols-outlined icone-botao">add</span>
-        </button>
     </nav>
     <main id="e-mail">
         <div class="itens">
-            <div class="item titulo">
+            <div class="item titulo-email">
                 <div class="campo">
                     <label for="titulo">Título</label>
                     <textarea name="titulo"></textarea>
                 </div>
             </div>
-            <div class="item">
+            <div class="item paragrafo">
                 <div class="campo">
                     <label for="p1">Parágrafo</label>
                     <textarea name="p1"></textarea>
                 </div>
-                <span class="material-symbols-outlined">delete</span>
+                <span class="material-symbols-outlined deletar">delete</span>
             </div>
-            <div class="item">
+            <div class="item imagem">
                 <div class="campo">
                     <label for="img1">Imagem</label>
                     <input type="file" name="img1">
+                    <img src="static/img/logo.png" alt="">
+                    <button>Enviar imagem</button>
                 </div>
-                <span class="material-symbols-outlined">delete</span>
+                <span class="material-symbols-outlined deletar">delete</span>
             </div>
         </div>
         <div class="preview">
