Controle de seções

--- a/e-mail.html
+++ b/e-mail.html
@@ -29,21 +29,9 @@
                     <textarea name="titulo"></textarea>
                 </div>
             </div>
-            <div class="item paragrafo">
-                <div class="campo">
-                    <label for="p1">Parágrafo</label>
-                    <textarea name="p1"></textarea>
-                </div>
-                <span class="material-symbols-outlined deletar">delete</span>
-            </div>
-            <div class="item imagem">
-                <div class="campo">
-                    <label for="img1">Imagem</label>
-                    <input type="file" name="img1">
-                    <img src="static/img/logo.png" alt="">
-                    <button>Enviar imagem</button>
-                </div>
-                <span class="material-symbols-outlined deletar">delete</span>
+            <div class="botoes">
+                <button class="botao adicionar-paragrafo"><span class="material-symbols-outlined">add</span>Adicionar parágrafo</button>
+                <button class="botao adicionar-imagem"><span class="material-symbols-outlined">add</span>Adicionar imagem</button>
             </div>
         </div>
         <div class="preview">
