--- a/e-mail.html
+++ b/e-mail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título</title>
+    <title>E-mail</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
     <link rel="icon" href="static/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="static\css\geral.css">
@@ -35,7 +35,17 @@
             </div>
         </div>
         <div class="preview">
-            
+            <div class="titulo">
+                <img src="static/img/logo.png" alt="">
+                <h1>Lorem ipsum</h1>
+            </div>
+            <div class="conteudo">
+                <h2></h2>
+            </div>
+            <div class="rodape">
+                <p>Não deseja mais receber e-mails?</p>
+                <a href="https://example.com">Cancelar inscrição</a>
+            </div>
         </div>
     </main>
     <script src="static/js/newsletter.js"></script>
